fixed the navigation bar and header overlapping

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ nav {
 /* HEADER */
 
 header {
-    height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px);
 }
 
 .header__container {
